[package]
name = "audit"
version = "0.1.1"
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
edition = "2018"

homepage = "https://github.com/little-dude/netlink"
keywords = ["netlink", "ip", "linux", "audit"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/little-dude/netlink"
description = "linux audit via netlink"

[dependencies]
futures = "0.3.0"
failure = "0.1.5"
netlink-packet-audit = { path = "../netlink-packet-audit" }
netlink-proto = { path = "../netlink-proto", features = ["workaround-audit-bug"] }

[dev-dependencies]
tokio = { git = "https://github.com/surban/tokio.git" }
env_logger = "*"