[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
name = "netlink-proto"
version = "0.2.0"
edition = "2018"

homepage = "https://github.com/little-dude/netlink"
keywords = ["netlink", "linux", "async"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/little-dude/netlink"
description = "async netlink protocol"

[dependencies]
bytes = "0.5"
log = "0.4.8"
futures = "0.3.0"
tokio-util = { version = "0.2.0", features = ["codec"] }
failure = "0.1.5"
netlink-packet-core = { path = "../netlink-packet-core", version = "0.1" }

[dependencies.netlink-sys]
default-features = false
features = ["tokio_socket"]
path = "../netlink-sys"
version = "0.2"

[features]
default = []
workaround-audit-bug = []

[dev-dependencies]
env_logger = "0.6.2"
tokio = "0.2.0"
netlink-packet-route = { path = "../netlink-packet-route" }
netlink-packet-audit = { path = "../netlink-packet-audit" }

[[example]]
name = "dump_links"

[[example]]
name = "audit_events"
required-features = ["workaround-audit-bug"]
